# lanez

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
alembic/: env.py
app/: config.py  csrf.py  database.py  dependencies.py  main.py  rate_limit.py
docs/: auditoria-fase1.md  deploy.md  escopo.md  kiro-briefing-fase1.md  kiro-briefing-fase2.md  kiro-briefing-fase3.md  kiro-briefing-fase4.5.md  kiro-briefing-fase4.md  kiro-briefing-fase5.md  kiro-briefing-fase6a.md  kiro-briefing-fase6b.md  kiro-briefing-fase7.md  mcp-client-setup.md
frontend/: .env.example  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
scripts/: migrate.sh  setup-webhook.sh
tests/: conftest.py  test_anthropic_client.py  test_audit_endpoint.py  test_audit_hooks.py  test_audit_service.py  test_auth_allowlist.py  test_auth_dual.py  test_briefings_list.py  test_csrf_middleware.py  test_edge_case_env.py  test_edge_cases_auth.py  test_edge_cases_briefing.py  test_edge_cases_embeddings.py  test_edge_cases_mcp.py  test_edge_cases_memory.py  test_graph_service.py  test_groq_voice.py  test_health.py  test_mcp_protocol_handshake.py  test_memories_create.py  test_property_auth_dual.py  test_property_backoff.py  test_property_briefing_attendees.py  test_property_briefings_list.py  test_property_cache_key.py  test_property_chunk_text.py  test_property_client_state.py  test_property_content_hash.py  test_property_crypto.py  test_property_dedup.py  test_property_embedding_dim.py  test_property_extract_text.py  test_property_mcp.py  test_property_mcp_dispatch.py  test_property_memory_tags_cleaned.py  test_property_pkce.py  (+15 more)
(+138 files in other folders)
