[project]
name = "lanez"
version = "0.1.0"
description = "Self-hosted MCP server that connects AI assistants to Microsoft 365 (calendar, mail, OneNote, OneDrive) with semantic search, persistent memory, and pre-meeting briefings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Lucas Milanez", email = "lucas@lanez.pt" },
]
keywords = ["mcp", "model-context-protocol", "microsoft-365", "graph-api", "fastapi", "self-hosted", "ai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/LucasMilanez/lanez"
Repository = "https://github.com/LucasMilanez/lanez"
Issues = "https://github.com/LucasMilanez/lanez/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841", "F541"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
